<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">

    <string name="app_name">侃侃</string>

    <!--WelcomeActivity-->
    <array name="app_intro_welcome">
        <item>向右滑动，让世界和你谈一谈</item>
        <item>加入我们，让你和他们聊一聊</item>
    </array>

    <string name="input_name">昵称</string>
    <string name="hint_name">1 至 20 个字符</string>
    <string name="start">开始使用</string>

    <string name="error_name_char">昵称必须为汉字、字母、数字和下划线的组合</string>
    <string name="error_name_length">昵称必须在 1 至 20 个字符以内</string>

    <!--MainActivity-->
    <string name="alert_exit_chitchat_title">离开侃侃</string>
    <string name="alert_exit_chitchat_content">离开后接收新的消息吗？如果您选择不接收，那么其他人也将无法在附近的用户中看到您</string>
    <string name="alert_exit_no_new_message">不接收新的消息</string>
    <string name="alert_exit_still_new_message">接收新的消息</string>

    <!--UserActivity-->
    <string name="user_avatar">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_tag">个人简介</string>
    <string name="user_sex">性别</string>
    <string name="hint_new_name">新的昵称</string>
    <string name="change_name">更改昵称</string>
    <string name="change_avatar">更换头像背景颜色</string>
    <string name="change_tag">更改个人简介</string>
    <string name="hint_new_tag">新的个人简介</string>
    <string name="change_sex">设置性别</string>

    <!--UserChooserActivity-->
    <string name="act_choose_user">选择用户</string>

    <!--ChatListFragment-->
    <string name="chats_top">置顶的对话</string>
    <string name="chats_normal">对话列表</string>
    <string name="alert_delete_chat_title">删除对话</string>
    <string name="alert_delete_chat_content">在您的设备中，所有相关的对话记录都将被彻底删除，确定要继续吗？</string>
    <string name="middle_bracket_image">[图片]</string>
    <string name="middle_bracket_audio">[语音]</string>

    <!--ChatDetailsFragment-->
    <string name="hint_send_message">输入要发送的内容</string>
    <string name="sending">发送中...</string>
    <string name="send_again">重新发送</string>
    <string name="withdrawing">正在撤回...</string>
    <string name="withdraw_again">重新撤回</string>
    <string name="alert_cannot_withdraw_title">暂时无法撤回</string>
    <string name="alert_cannot_withdraw_content">您还未开启撤回消息的功能，请前往设置界面查看详情</string>

    <!--SearchFragment-->
    <string name="hint_search">搜索</string>
    <string name="friends">朋友</string>
    <string name="chat_details">聊天记录</string>

    <!--AudioRecordFragment-->
    <string name="act_hold_and_speak">按住并说话</string>
    <string name="act_release_to_stop">松开以发送</string>

    <!--NearbyPeopleFragment-->
    <string name="find_new_friend">寻找新的朋友</string>
    <string name="nearby_people">附近的人</string>

    <!--Notifications-->
    <string name="unread_messages">条未读信息</string>
    <string name="unread_comments">个新评论</string>

    <!-- SettingsActivity -->
    <string name="can_withdraw_title">撤回消息</string>
    <string name="can_withdraw_summary_on">您可以撤回发送过的消息，同时，其他用户也可以撤回他发送给您的消息</string>
    <string name="can_withdraw_summary_off">您无法撤回发送过的消息，其他用户也无法撤回他发送给您的消息</string>

    <!--时间-->
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="yesterday">昨天</string>

    <array name="time_period">
        <item>凌晨</item>
        <item>早晨</item>
        <item>上午</item>
        <item>中午</item>
        <item>下午</item>
        <item>傍晚</item>
        <item>晚上</item>
        <item>深夜</item>
    </array>

    <!--性别-->
    <string name="sex_private">保密</string>
    <string name="sex_man">男</string>
    <string name="sex_girl">女</string>
    <string name="own_private">TA 的</string>
    <string name="own_his">他的</string>
    <string name="own_her">她的</string>
    <string name="own_my">我的</string>

    <array name="sex">
        <item>@string/sex_private</item>
        <item>@string/sex_man</item>
        <item>@string/sex_girl</item>
    </array>

    <array name="own">
        <item>@string/own_private</item>
        <item>@string/own_his</item>
        <item>@string/own_her</item>
    </array>

    <string name="attachment_take_photo">拍摄照片</string>
    <string name="attachment_image">图片</string>
    <string name="attachment_audio">音频</string>
    <string name="attachment_location">地理位置</string>
    <string name="attachment_file">文件</string>

    <array name="attachment_type">
        <item>@string/attachment_take_photo</item>
        <item>@string/attachment_image</item>
        <item>@string/attachment_audio</item>
        <item>@string/attachment_location</item>
        <item>@string/attachment_file</item>
    </array>

    <!--空状态下的提示-->
    <string name="empty_state_chat_list_1">还没有对话</string>
    <string name="empty_state_chat_list_2">点击右下方的按钮\n寻找新的朋友</string>

    <!--错误信息-->
    <string name="error_cannot_get_location">无法获取地理位置信息，请重新尝试</string>
    <string name="error_network_disconnected">未连接网络，请检查后重试</string>
    <string name="error_permission_not_granted">未赋予相关权限，无法继续操作</string>
    <string name="error_unknown">发生了未知的错误...</string>
    <string name="error_send_message_failed">发送失败</string>
    <string name="error_withdraw_failed">撤回失败</string>
    <string name="error_activity_not_found">无法找到能完成该操作的应用</string>
    <string name="error_cannot_update_user_info_network">未连接网络，无法更新用户信息</string>

    <!--成功信息-->
    <string name="success_copy_to_clipboard">已成功复制到剪贴板</string>

    <!--动作-->
    <string name="act_confirm">确认</string>
    <string name="act_cancel">取消</string>
    <string name="act_search">搜索</string>
    <string name="act_check_user_detail">查看用户信息</string>
    <string name="act_check_me_detail">个人信息</string>
    <string name="act_exit">退出</string>
    <string name="act_copy">复制</string>
    <string name="act_forward">转发</string>
    <string name="act_delete">删除</string>
    <string name="act_withdraw">撤回</string>
    <string name="act_sticky_on_top">置顶该对话</string>
    <string name="act_remove_from_top">取消置顶该对话</string>
    <string name="act_explore">探索</string>

    <!--其它-->
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="life">生活</string>

    <string name="explore_comment_hint">评论</string>
    <string name="title_activity_publish">发布动态</string>
    <string name="act_publish">发布</string>
    <string name="publish_text_hint">说些什么吧…</string>
    <string name="uploading">正在上传</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_error">上传失败</string>

    <string name="publish_exit_title">确定退出?</string>
    <string name="publish_exit_message">退出将放弃正在编辑的动态</string>
    <string name="publish_waiting">请稍候</string>
    <string name="publish_compress">正在压缩图片…</string>
    <string name="publish_error">发布失败</string>
    <string name="publish_sucess">发布成功</string>
    <string name="explore_like_comment_count">赞(%1$d) | 评论(%2$d)</string>
    <string name="comment_success">回复成功</string>
    <string name="comment_error_server">服务器出错</string>
    <string name="comment_error">出现错误,回复失败</string>
    <string name="title_activity_explore_detail">详情</string>
    <string name="image_pager_indicator">%1$d/%2$d</string>
    <string name="act_share_explore">分享</string>
    <string name="image_saved">图片已保存</string>
    <string name="image_save_failed">图片保存失败</string>
    <string name="new_comment">发表了评论</string>
    <string name="refresh_error">获取数据失败!</string>
    <string name="image_get_failed">图片获取失败</string>
    <string name="time_just">刚刚</string>
    <string name="time_minutes_age">分钟前</string>
    <string name="time_hours_age">小时前</string>
    <string name="before_yesterday">前天</string>
    <string name="brackets">(%d)</string>
    <string name="like">赞</string>
    <string name="comment">评论</string>
    <string name="explore_location">正在定位…</string>
    <string name="publish_remove_image_title">确定移除该图片?</string>
    <string name="publish_remove_image_message">移除后将不再上传</string>

    <!--content descriptions-->
    <string name="cd_avatar" translatable="false">avatar</string>
    <string name="cd_image" translatable="false">image</string>
    <string name="cd_retry" translatable="false">retry</string>
    <string name="cd_audio_state" translatable="false">audio state</string>
    <string name="cd_empty" translatable="false">empty</string>
    <string name="cd_back" translatable="false">back</string>

    <string name="title_activity_user_explore">我的动态</string>
    <string name="title_activity_setting">设置</string>
    <string name="explore_item_empty">还没有数据</string>
    <string name="title_activity_choose_location">所在位置</string>
    <string name="location_not_display">不显示位置</string>
    <string name="title_activity_location_infor">位置信息</string>
    <string name="location_infor_close">关闭</string>
    <string name="location_infor_open_in_map">在地图中打开</string>
    <string name="location_infor_nearby">附近的景点</string>
    <string name="location_infor_address">地址</string>
    <string name="location_infor_distance">%1$d米</string>
    <string name="location_distance_unit_m">米</string>
    <string name="location_distance_unit_km">千米</string>
    <string name="location_apart">相距%1$s</string>
    <string name="act_message">与 TA 聊天</string>
    <string name="location_apart_close">在附近</string>
    <string name="header_menu_item">更换封面</string>
    <string name="upload_user_cover_error">上传封面失败</string>
    <string name="upload_retry">重试</string>
    <string name="upload_user_cover_success">封面更换成功</string>
    <string name="set_user_cover_error">设置封面失败,可能是网络或服务器故障</string>
    <string name="license">开源许可</string>
    <string name="title_activity_license">开源许可</string>
    <string name="audio_too_short">声音太短，已抛弃</string>

</resources>