<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <!--上面两句是为了防止ChatListFragment里的RecyclerView自动滑动-->

    <LinearLayout
        android:id="@+id/ll_empty_state_chat_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_state_chat_list"
            android:contentDescription="@string/cd_empty"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textColor="@color/black_26p"
            android:text="@string/empty_state_chat_list_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black_16p"
            android:text="@string/empty_state_chat_list_2"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sv_chat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_chats_sticky"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/chats_top"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_chats_sticky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/full_cardview_margin_side"
                android:layout_marginRight="@dimen/full_cardview_margin_side"
                android:layout_marginBottom="8dp"
                app:cardElevation="2dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_chats_sticky"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_chats_normal"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/chats_normal"/>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_chats_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/full_cardview_margin_side"
                android:layout_marginRight="@dimen/full_cardview_margin_side"
                android:layout_marginBottom="8dp"
                app:cardElevation="2dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_chats_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>