<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.room517.chitchat.ui.activities.LocationInforActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/location_infor_title"
            android:textSize="18sp"
            android:textColor="@color/black_87p"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/location_infor_address"
            android:textColor="?attr/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/location_infor_address"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="15sp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/location_infor_nearby"
            android:textColor="?attr/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/location_infor_list"
            android:dividerHeight="1dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <ProgressBar
            android:id="@+id/location_infor_progressbar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="onCloseClick"
            android:text="@string/location_infor_close"
            android:foreground="?attr/selectableItemBackground"
            android:background="@null"
            android:textColor="?attr/colorControlHighlight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="onOpenInMapClick"
            android:text="@string/location_infor_open_in_map"
            android:textColor="?attr/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:background="@null"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
