<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    tools:context="com.room517.chitchat.ui.activities.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MainActivity.ActionBar"
        app:contentInsetStart="72dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/actionbar_shadow"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/full_cardview_margin_side"
            android:layout_marginRight="@dimen/full_cardview_margin_side"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="onRlAvatarClicked"
                    style="@style/SelectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/user_avatar"
                        android:textSize="16sp"
                        android:textColor="@color/black_54p"/>

                    <ImageView
                        android:id="@+id/iv_avatar_user"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_6p"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="onRlNameClicked"
                    style="@style/SelectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/user_name"
                        android:textSize="16sp"
                        android:textColor="@color/black_54p"/>

                    <TextView
                        android:id="@+id/tv_name_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black_38p"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_6p"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="onRlTagClicked"
                    style="@style/SelectableItemBackground">

                    <TextView
                        android:id="@+id/tv_tag_title_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="19dp"
                        android:textSize="16sp"
                        android:textColor="@color/black_54p"
                        android:text="@string/user_tag"/>

                    <TextView
                        android:id="@+id/tv_tag_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="@dimen/user_introduction_margin"
                        android:layout_marginLeft="@dimen/user_introduction_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black_38p"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_6p"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="onRlSexClicked"
                    style="@style/SelectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textSize="16sp"
                        android:textColor="@color/black_54p"
                        android:text="@string/user_sex"/>

                    <TextView
                        android:id="@+id/tv_sex_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black_38p"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_6p"/>

                <TextView
                    android:id="@+id/tv_explore_user_as_bt"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    style="@style/SelectableItemBackground"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <EditText
        android:id="@+id/et_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
